[package]
name = "ffmpeg-common"
description = "Common library for FFmpeg Suite RS"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
which = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"